updated project pages - fixed wrong link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 function blockUI() {
   $.blockUI({
-    message: '<img src="images/loading-text-big" style="margin: 7px 40px 0; border: none;">',
+    message: '<img src="images/loading-text-big.gif" style="margin: 7px 40px 0; border: none;">',
     css: {
       'background-color': '#171717',
       width: '250px',
