--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Firetabs by sunlaud</title>
+    <title>Firetabs</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -37,7 +37,7 @@ function installPlugin(event) {
   blockUI();
   setTimeout(function(){
     $.ajax({
-        url: "https://api.github.com/repos/sunlaud/Firetabs/contents/firetabs-0.3.xpi?ref=dist",
+        url: "https://api.github.com/repos/sunlaud/firetabs/contents/firetabs-0.3.xpi?ref=dist",
         dataType: "jsonp",
         success: function(response) {
             if(response.meta.status == 200) {
@@ -71,7 +71,7 @@ $(function(){
         <ul>
           <li><p><a class="buttons install" href="javascript: void 0">Install</a></p></li>
           <li class="download"><a class="buttons" href="http://code.google.com/p/firetabs-extension/downloads/list">Download</a></li>
-          <li><a class="buttons github" href="https://github.com/sunlaud/Firetabs">View On GitHub</a></li>
+          <li><a class="buttons github" href="https://github.com/sunlaud/firetabs">View On GitHub</a></li>
         </ul>
 
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/sunlaud">sunlaud</a></p>
@@ -79,67 +79,68 @@ $(function(){
 
       </header>
       <section>
-        <h2>About</h2>
+<h2>About</h2>
 
 <p>Firetabs is a Firefox extension that lists all your open tabs in one html document, with tab names and page urls.</p>
 
 <h2>Why</h2>
 
 <ul>
-<li>Lost in dozens of tabs?</li>
-<li>Struggle with Firefox for memory?</li>
-<li>Tabs "just in case"?</li>
-</ul><p>...then you know why</p>
+  <li>Lost in dozens of tabs?</li>
+  <li>Struggle with Firefox for memory?</li>
+  <li>Tabs "just in case"?</li>
+</ul>
+<p>...then you know why</p>
 
 <h2>Features</h2>
 
 <ul>
-<li>Every entry in tab list is hyperlink to page loaded in tab, so you can easily (re)open your tabs</li>
-<li>Tab list can be saved just as regular html file (File --&gt; Save Page As, just make sure to choose "Web Page, complete" as output format). You can later open tab list or share it with someone else (even without Firetabs installed) - it's just single plain html file</li>
-<li>You can remove some tabs (or whole windows) from tab list (red "x") if you don't want to see them (they will not be saved either)</li>
-<li>In list tabs are grouped by windows they belong to for easy navigation</li>
-<li>Tab url is shown as additional hint (in case document title is empty or/and not very informative)</li>
+  <li>Every entry in tab list is hyperlink to page loaded in tab, so you can easily (re)open your tabs</li>
+  <li>Tab list can be saved just as regular html file (File --&gt; Save Page As, just make sure to choose "Web Page,
+      complete" as output format). You can later open tab list or share it with someone else (even without Firetabs
+      installed) - it's just single plain html file</li>
+  <li>You can remove some tabs (or whole windows) from tab list (red "x") if you don't want to see them
+      (they will not be saved either)</li>
+  <li>In list tabs are grouped by windows they belong to for easy navigation</li>
+  <li>Tab url is shown as additional hint (in case document title is empty or/and not very informative)</li>
 </ul>
 
 <h2>Install</h2>
 
-<p>Firetabs is a very young project and it cannot be found at addons.mozilla.org yet.
+<p>
 You can install latest version using <a id="install_link" href="javascript: void 0">this link</a>.
 
-Alternatively you can visit project page at <a href="http://code.google.com/p/firetabs-extension/downloads/list">Google Code</a>, download binary package (.xpi file) and install Firetabs manually following steps below.
+All other versions are available on project page at <a href="http://code.google.com/p/firetabs-extension/downloads/list">Google Code</a>. If you download extension from there you'll have to install it manually:
 
 <ol>
-<li>Download .xpi file from Downloads section</li>
-<li>Open Firefox Extension Manager: Tools --&gt; Addons</li>
-<li>Click drop-down box in top right corner (near search field) and select "Install addon from file"</li>
-<li>Point to downloaded .xpi file.</li>
-</ol><h2>Develop</h2>
+  <li>Download .xpi file</li>
+  <li>Open Firefox Extension Manager: Tools --&gt; Addons</li>
+  <li>Click drop-down box in top right corner (near search field) and select "Install addon from file"</li>
+  <li>Point to downloaded .xpi file.</li>
+</ol>
 
-<p>You are welcome to <a href="https://github.com/sunlaud/Firetabs">contribute</a>!</p>
+<h2>Develop</h2>
 
-<p>In order to build binary distribution you must have <a href="http://www.gradle.org">gradle</a> installed.
-To build .xpi execute</p>
-
-<pre><code>gradle xpi
-</code></pre>
-
+<p>You are welcome to <a href="https://github.com/sunlaud/firetabs">contribute</a>!</p>
 
 <h2>License</h2>
 
 <p>Copyright 2013 sunlaud</p>
 
-<p>Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at</p>
+<p>
+   Licensed under the Apache License, Version 2.0 (the "License");<br/>
+   you may not use this file except in compliance with the License.<br/>
+   You may obtain a copy of the License at<br/>
+   <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
+</p>
 
-<pre><code>   http://www.apache.org/licenses/LICENSE-2.0
-</code></pre>
-
-<p>Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.</p>
+<p>
+   Unless required by applicable law or agreed to in writing, software<br/>
+   distributed under the License is distributed on an "AS IS" BASIS,<br/>
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.<br/>
+   See the License for the specific language governing permissions and<br/>
+   limitations under the License.
+</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
